--- a/style.css
+++ b/style.css
@@ -4,14 +4,22 @@
   padding: 0;
   box-sizing: border-box;
 }
-
+/*paralaxe img*/
+.back{
+  background: url("./img/desenvolvedor.jpg.webp") fixed no-repeat;
+  background-size: cover ;
+  width: 100%;
+  height: 20rem;
+}
+  /*background-image: url("./img/desenvolvedor.jpg.webp");
+background-repeat: no-repeat;
+  background-attachment: fixed;*/
 body {
   font-family: "Poppins", sans-serif;
   color: #fff;
   background: linear-gradient(120deg, #111, #1a1a1a);
   overflow-x: hidden;
 }
-
 /* ===== GRADIENTE ANIMADO ===== */
 .bg-animado {
   position: fixed;
@@ -24,7 +32,6 @@ body {
   z-index: -1;
   animation: gradMov 10s ease infinite;
 }
-
 @keyframes gradMov {
   0% {
     background-position: 0% 50%;
@@ -38,7 +45,6 @@ body {
     background-position: 0% 50%;
   }
 }
-
 /* ===== HEADER ===== */
 
 /* ================================================= */
