--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
 /* ============================================================
    ELEMENTOS PRINCIPAIS (Header, Hero, Seções)
 ============================================================ */
+
 .header {
   width: 100%;
   padding: 25px 60px;
@@ -74,7 +75,7 @@ nav a:hover {
   align-items: center;
   justify-content: space-around;
   gap: 30px;
-  padding: 50px 60px;
+  
 }
 
 /* COLUNA DE TEXTO */
@@ -146,14 +147,6 @@ nav a:hover {
   height: auto;
   object-fit: contain;
   
-}
-
-
-/* Hero responsivo */
-@media (max-width: 900px) {
-  .hero-img {
-    display: none;
-  }
 }
 
 /* Estilos Padrão das Seções */
@@ -528,6 +521,8 @@ footer {
 
 /* LAPTOPS E TABLETS GRANDES (até 1100px) */
 @media (max-width: 1100px) {
+
+  
   .heromae {
     padding-top: 180px;
     gap: 40px;
@@ -613,21 +608,21 @@ footer {
 /* CELULARES NORMAIS (até 480px) */
 @media (max-width: 480px) {
 
+  .header nav {
+    display: none;
+  }
+  .header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
   .nickname h1 {
     font-size: 1.6rem;
   }
 
-  nav {
-    gap: 8px;
-  }
-
-  nav a {
-    font-size: 0.85rem;
-    padding: 7px 10px;
-  }
-
   .heromae {
-    padding: 200px 20px 50px;
+    padding: 70px 20px 50px;
   }
 
   .hero h2 {
@@ -652,9 +647,9 @@ footer {
 }
 
 /* CELULARES PEQUENOS (até 394px) */
-@media (max-width: 394px) {
+@media (max-width: 399px) {
   .hero {
-    padding-top: 100px;
+    padding-top: 60px;
   }
   .hero h2 {
     font-size: 1.7rem;
@@ -670,8 +665,8 @@ footer {
   }
 }
 
-@media (max-width: 348px) {
+@media (max-width: 337px) {
   .hero {
-    padding-top: 150px;
+    padding-top: 70px;
   }
 }
